tests-system/xref-2/output
link != null implies link.status == bar.Status.NEW, "Must be linked to new"
                     ^^^^ xref-2/checks.check:4: error: expression 'link' has type MyType, which is not a tuple
Processed 1 model(s), 1 check(s) and 1 requirement file(s) and found 1 error(s)
